<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>user-pref-service</groupId>
	<artifactId>user-pref-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>user-pref-service</name>
	<packaging>jar</packaging>
	<properties>
		<java.version>9</java.version>
		<start-class>com.pearlin.whatflix.user.pref.Main</start-class>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.1.RELEASE</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
					<mainClass>com.pearlin.whatflix.user.pref.UserPreferenceServer</mainClass>
				</configuration>
				<executions>
					<execution>
						<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties 
							file is present -->
						<goals>
							<goal>build-info</goal>
						</goals>
						<configuration>
							<additionalProperties>
								<encoding.source>${project.build.sourceEncoding}</encoding.source>
								<encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
								<java.source>${maven.compiler.source}</java.source>
								<java.target>${maven.compiler.target}</java.target>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>a</id>
			<url>https://repo.spring.io/milestone/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>b</id>
			<url>https://repo.spring.io/milestone/</url>
		</pluginRepository>
	</pluginRepositories>
</project>